# moneyball-cli

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  HANDOFF.md  TODO.md
.githooks/: post-push
.pi/: settings.json
.pi/prompts/: tdd.md
.test-harness/: README.md  build-html.py  features.toml
.test-harness/desired-state/: index.html  index.template.html
crates/moneyball/: Cargo.toml
crates/moneyball-core/: Cargo.toml
crates/moneyball-core/examples/: kc_selftest.rs
crates/moneyball-core/src/: agent.rs  brief.rs  config.rs  crm.rs  error.rs  fetch.rs  funnel.rs  lib.rs  llm.rs  logo.rs  meta.rs  provider.rs  secrets.rs  session.rs  snapshot.rs  tools.rs
crates/moneyball-core/src/crm/: connect.rs  fetch.rs  mod.rs  presets.rs  source.rs  template.crm.toml
crates/moneyball-core/tests/: fetch_roundtrip.rs
crates/moneyball-tui/: Cargo.toml
crates/moneyball-tui/examples/: render_app.rs  render_brief_big.rs  render_chat.rs  render_placeholder.rs  render_session.rs  render_setup.rs  render_views.rs
crates/moneyball-tui/src/: app.rs  chat.rs  commands.rs  event.rs  lib.rs  markdown.rs  render.rs  setup.rs  widgets.rs
crates/moneyball-tui/src/setup/: mod.rs  render_steps.rs
crates/moneyball/src/: connect_flow.rs  main.rs
docs/: CRM_CONNECTORS.md  CRM_CONTRACT.md
