[workspace]
resolver = "2"
members = [
    "crates/moneyball",
    "crates/moneyball-core",
    "crates/moneyball-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
license = "MIT"
authors = ["Kailash Kumar <kailash.kumar@modlix.com>"]

[workspace.dependencies]
# TUI stack
ratatui = "0.30"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Serde + JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CSV
csv = "1"

# Errors
anyhow = "1"
thiserror = "1"

# Secrets live in ~/.moneyball/auth.json (0600) - codex-style file store.
# (We moved off `keyring`: macOS ties keychain ACLs to the code signature,
# so every locally-built binary re-prompted the user for access.)

# HTTP (Meta Graph API, Anthropic streaming later)
reqwest = { version = "0.12", features = ["json", "stream", "blocking", "rustls-tls"] }
# rustls-tls avoids the openssl-sys native dep on macOS

# Workspace members
moneyball-core = { path = "crates/moneyball-core" }
moneyball-tui = { path = "crates/moneyball-tui" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.dev]
opt-level = 0
debug = 1