[package]
name = "moneyball-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
csv.workspace = true
reqwest.workspace = true